ajout de la suppression de l'historique

--- a/TCP/Makefile
+++ b/TCP/Makefile
@@ -1,4 +1,4 @@
-.PHONY: all, clean, start-server, start-client
+.PHONY: all, cleanCode, cleanHistory, clean, start-server, start-client
 
 JC = javac
 JE = java
@@ -7,9 +7,12 @@ JOPT = -d ./classes -sourcepath ./src
 
 SOURCES = ${wildcard src/*.java}
 CLASSES = ${SOURCES:src/%.java=classes/%.class}
+HISTORY = ${wildcard history/*.save}
+
 SERVER = EchoServerMultiThreaded
 CLIENT = ClientLauncher
 DEFAULT_PORT = 5100
+
 port ?= $(DEFAULT_PORT)
 
 all : $(CLASSES)
@@ -19,9 +22,15 @@ classes/%.class : src/%.java
 	@echo "compilation de <$<>"
 	@$(JC) $(JOPT) $<
 
-clean :
+cleanCode :
 	@echo "Suppression des fichiers compilés."
 	@rm $(CLASSES) -vf
+
+cleanHistory :
+	@echo "Suppression des sauvegardes d'historiques."
+	@rm $(HISTORY) -vf
+
+clean : cleanCode cleanHistory
 
 start-client :
 	@$(JE) $(JCP) $(CLIENT)
